--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
+// tsconfig.json
 {
   "files": [],
+  "compilerOptions": {
+    "typeRoots": ["./src/@types", "./node_modules/@types"]
+  },
   "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.node.json"
-    }
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
   ]
 }
